--- a/documents/main.tex
+++ b/documents/main.tex
@@ -5,6 +5,8 @@
 \usepackage{subfigure}
 \usepackage{grffile}
 \usepackage{amsfonts}
+\usepackage{indentfirst}
+\setlength{\parindent}{2em}
 \usepackage[hidelinks]{hyperref}
 \hypersetup{
   colorlinks   = true, %Colours links instead of ugly boxes
@@ -28,8 +30,8 @@
 Please check the Readme.md in the  \href{https://github.com/zjzsliyang/CSAW-HackML-2020}{github repo}. We introduce the way to run the code correctly.
 
 \section{Model Structure}
-
-Our model is based on the default model in the origin repo. See details in picture 1. 
+    The process of our solution can be divided into two parts. Detecting backdoors and Repair BadNets.
+    Our model is based on the default model in the origin repo. See details in picture 1. 
 \begin{figure}
     \centering
     \includegraphics[width=10cm,  height=6cm]{"model_structure.png"}
@@ -51,9 +53,23 @@ The key point on detecting backdoors is that if a model is poisoned, it requires
     \item Choose the valid trigger. We need to choose the valid trigger in all 1283 triggers. It depends on the number of pixels the trigger trying to influence in the models. Our method is to calculate the L1 norms of all triggers. Then we will calculate the absolute deviation between all data points and the median. If the absolute deviation of a data point divided by that median is larger than 2, we mark it as a target trigger. The target trigger which is most effective to misclassify the model will be the 'reverse trigger' we need to repair BadNets.
 \end{enumerate}
 
+The implementation of the step 1 and 2 is in the \href{https://github.com/zjzsliyang/CSAW-HackML-2020/blob/master/visualizer.py}{\texttt{visualizer.py}}
+
+The implementation of the step 3 is in the \href{https://github.com/zjzsliyang/CSAW-HackML-2020/blob/master/mad_outlier_detection.py}{\texttt{mad\_outlier\_detection.py}}.
+
 
 \section{Repair BadNets}
+
+
 In order to repair BadNets, we decided to patch the infected model by pruning the poisoned neurons in the BadNet with the 'reverse trigger'.
+
+The target trigger poisoned neurons in the model to make it misclassify the label, so we need to find these neurons and set their output value to 0 so that the model will not be affected by the trigger anymore. 
+
+Therefore we rank the neurons by differences between clean input and poisoned input produced by the 'reverse triggers'. We again target the second to last layer, and prune neurons by order of highest rank first. In order to keep the performance of the model on clean target, we decided to stop the iteration as soon as the model is not sensitive to the poisoned input any more.
+
+You can find details in the \href{https://github.com/zjzsliyang/CSAW-HackML-2020/blob/master/repair_model.py}{\texttt{repair\_model.py}}.
+
+
 
 
 \newpage
