--- a/doc/main.tex
+++ b/doc/main.tex
@@ -17,7 +17,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \documentclass[letterpaper]{article}
-\usepackage[letterpaper, nohe adfoot]{geometry}
+\usepackage[letterpaper]{geometry}
 \usepackage{fontspec, color, enumerate, sectsty}
 \usepackage[normalem]{ulem}
 \usepackage{natbib}
